--- a/tutorial_13.html
+++ b/tutorial_13.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boolean</title>
+    <title>Tutorial 13</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,12 +12,12 @@
     />
   </head>
   <body>
-    <h1>Boolean</h1>
+    <h1>Operator aritmatika</h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="tutorial_10.js"></script>
+    <script src="tutorial_13.js"></script>
   </body>
 </html>
